# cli

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/inc/: cli.h
lib/src/: cli.cpp
lib/test/: CMakeLists.txt
lib/test/src/: main.cpp
prj/: CMakeLists.txt
prj/src/: main.cpp
